added new lines

--- a/beautiful.html
+++ b/beautiful.html
@@ -21,7 +21,7 @@
         <p>tiger ase</p>
     </div>
     <h1>Adding makeup. YAY!</h1>
-    <h3>this is medium</h3>
+    <h3>this is medium. I love this medium</h3>
     <p id="murgi">hubby makeup</p>
     <h1 class="friend">Another header</h1>
     <h1>third header</h1>
